<resources>
    <string name="app_name">My AppTest</string>
    <string name="sign_in_text">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="submit_btn">Submit</string>
    <string name="view_btn">View</string>
    <string name="forgot_txt">Forgot your Details?</string>
    <string name="add_image">Add Image</string>
    <string name="upload_image_test">Upload Image Test</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="test_time_picker">Select time</string>
    <string name="show_time">No time selected</string>
    <string name="show_date">No date selected</string>
    <string name="test_date_picker">Select date</string>
</resources>