<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarTest">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/test_time_picker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_time_btn"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/time"
        android:text="@string/show_time"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pick_date_btn"
        android:layout_below="@id/pick_time_btn"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/test_date_picker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_date_btn"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/date"
        android:text="@string/show_date"
        android:textSize="18sp" />
</RelativeLayout>