<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadImage">

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/upload_image_test"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

<!--    Create a button to upload image-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_text"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/choose_image"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

<!--    Create a button to confirm upload image -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_btn"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/upload_image"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

<!--    create an image view to display the image-->
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_launcher_background" />
</RelativeLayout>